peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/Tax_Rules_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Tax Rules Settings</label>
</CustomObject>