peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Parent_Generate_Tax_Matrix_Message_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Generate_Tax_Matrix_Message_Field__c</fullName>
    <defaultValue>&quot;TC_TAX__Generate_Tax_Matrix_Message_Long__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Generate Tax Matrix Message Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>