peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <defaultValue>&quot;Opportunity&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>