peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Parent_Tax_Calculation_Error_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Tax_Calculation_Error_Field__c</fullName>
    <defaultValue>&quot;TC_TAX__Last_Tax_Calculation_Error_Details__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Tax Calculation Error Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>