peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Rate_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code_Field__c</fullName>
    <defaultValue>&quot;TC_TAX__Rate_Code__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Code Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>