peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Rate_County_Field__c.field-meta.xml
<CustomField>
    <fullName>Rate_County_Field__c</fullName>
    <defaultValue>&quot;TC_TAX__County__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate County Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>