peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/State_Tax_Rate_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Rate_Field__c</fullName>
    <defaultValue>&quot;TC_TAX__State_Tax_Rate__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>State Tax Rate Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>