peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Tax_Calculation_Completion_Alert_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculation_Completion_Alert_Seconds__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Tax Calculation Completion Alert Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>