peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Tax_Parent_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Tax_Parent_Object_Field__c</fullName>
    <defaultValue>&quot;TC_TAX__Opportunity__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Parent Object Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>