peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/TCounty_Tax_Rate_Field__c.field-meta.xml
<CustomField>
    <fullName>TCounty_Tax_Rate_Field__c</fullName>
    <defaultValue>&quot;TC_TAX__County_Transit_Tax_Rate__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>TCounty Tax Rate Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>