peac_dev/force-app/main/default/objects/Tax_Rules_Settings__c/fields/Use_Platform_Event_Instead_of_Future__c.field-meta.xml
<CustomField>
    <fullName>Use_Platform_Event_Instead_of_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Platform Event Instead of Future</label>
    <type>Checkbox</type>
</CustomField>